--- a/pages/product/order_list.html
+++ b/pages/product/order_list.html
@@ -14,7 +14,7 @@
             --success-color: #10b981; /* Emerald */
             --warning-color: #f59e0b; /* Amber */
             --danger-color: #ef4444; /* Red */
-            --info-color: #3b82f6; /* Blue */
+            --info-color: #0c0d0e; /* Blue */
             --text-color: #1f2937; /* Gray 800 */
             --text-light: #6b7280; /* Gray 500 */
             --background-color: #f9fafb; /* Gray 50 */
@@ -573,7 +573,7 @@
 
             async fetchLastOrder() {
                 try {
-                    const response = await fetch('http://localhost:8001/api/payments/?latest=true');
+                    const response = await fetch('http://localhost:8011/api/payments/?latest=true');
                     if (!response.ok) throw new Error('Failed to fetch order');
                     const orders = await response.json();
                     
